# todo

./: .env.example  .gitignore  .gitmodules  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Containerfile.ubi  Dockerfile  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-and-deploy.yml  ci.yml  docker-publish.yml
assets/: app.css  service-worker.js
assets/shared-assets/shared-rust/: Cargo.toml  rust-toolchain.toml
assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
assets/shared-assets/shared-rust/shared-backend/src/: database.rs  lib.rs
assets/shared-assets/shared-rust/shared-backend/src/auth/: middleware.rs  mod.rs  session.rs
assets/shared-assets/shared-rust/shared-backend/src/auth/attempts/: mod.rs  tests.rs
assets/shared-assets/shared-rust/shared-backend/src/middleware/: cors.rs  hsts.rs  mod.rs  security_headers.rs  title.rs
assets/shared-assets/shared-rust/shared-backend/src/security/: mod.rs
assets/shared-assets/shared-rust/shared-backend/src/server/: bootstrap.rs  config.rs  error.rs  ip.rs  version.rs
assets/shared-assets/shared-rust/shared-backend/src/server/tests/: general.rs  mod.rs
assets/shared-assets/shared-rust/shared-core/: Cargo.toml
assets/shared-assets/shared-rust/shared-core/src/: lib.rs  types.rs
assets/shared-assets/shared-rust/shared-core/src/i18n/: strings.rs
assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
assets/shared-assets/shared-rust/shared-frontend/src/: lib.rs  utils.rs
assets/shared-assets/shared-rust/shared-frontend/src/components/: header.rs
assets/shared-assets/shared-rust/shared-frontend/src/theme/: icons.rs  mapping.rs  mod.rs
assets/shared-assets/styles/components/: body.css
assets/shared-assets/styles/layout/: footer.css  header.css
assets/shared-assets/styles/pages/: login.css  print.css
assets/shared-assets/styles/themes/: themes.css
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  handlers.rs  main.rs  middleware.rs  state.rs  static_files.rs  tests.rs  types.rs
backend/src/middleware/: auth.rs  custom.rs  mod.rs
backend/src/routes/: config.rs  mod.rs  todos.rs
backend/src/routes/auth/: logout.rs  mod.rs  pin_required.rs  verify_pin.rs
backend/src/tests/: domain.rs  routes.rs
frontend/: Cargo.toml  index.html
frontend/Assets/: app.css  base.css  header.css
frontend/Assets/shared-assets/: CHANGELOG.md  LICENSE  README.md
frontend/Assets/shared-assets/shared-rust/: clippy.toml  deny.toml  rustfmt.toml
frontend/Assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-backend/src/server/: config.rs  mod.rs
frontend/Assets/shared-assets/shared-rust/shared-backend/src/server/tests/: config.rs
frontend/Assets/shared-assets/shared-rust/shared-core/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-core/src/i18n/: mod.rs
frontend/Assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
frontend/Assets/shared-assets/shared-rust/shared-frontend/src/components/: footer.rs  header.rs  mod.rs  notifier.rs
frontend/src/: api.rs  app.rs  app_helpers.rs  footer.rs  header.rs  login.rs  main.rs  storage.rs  theme.rs  todo_list.rs  types.rs
frontend/src/app/: update.rs  view.rs
frontend/src/components/: footer.rs  header.rs  mod.rs  pin.rs  toast.rs  todo_form.rs  todo_item.rs  todo_items_list.rs  todo_list.rs  todo_list_handlers.rs
shared/: Cargo.toml
shared/src/: lib.rs
