[package]
name = "backend"
version = "2.0.0"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/todo"
homepage = "https://github.com/UberMetroid/todo"
description = "Axum backend service for Todo."
readme = "../README.md"

[dependencies]
shared-assets = { path = "../frontend/Assets/shared-assets/shared-rust" }
shared = { path = "../shared" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
axum-extra = { version = "0.12", features = ["cookie"] }
dotenvy = "0.15"
sha2 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

