[package]
name = "backend"
version = "3.0.35"
edition = "2024"
authors = ["etecoons"]
license = "Apache-2.0"
repository = "https://github.com/etecoons/todo"
homepage = "https://github.com/etecoons/todo"
description = "Axum backend service for Todo."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
axum-extra = { version = "0.12", features = ["cookie"] }
dotenvy = "0.15"
sha2 = "0.11"
tracing = "0.1"
# Mirror of shared-assets's deps so we can call `constant_time_eq::constant_time_eq`
# and `ipnet::IpNet` directly from this crate. Pulled in transitively by
# shared-assets but declared explicitly per Rust convention.
constant_time_eq = "0.5"
ipnet = "2.9"

