[package]
name = "frontend"
version = "3.0.1"
edition = "2024"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/todo"
homepage = "https://github.com/UberMetroid/todo"
description = "Yew frontend application for Todo."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.0" }
shared-frontend = { git = "https://github.com/UberMetroid/shared-assets", tag = "v3.0.0" }
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
js-sys = "=0.3.98"
web-sys = { version = "=0.3.98", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlFormElement",
    "MediaQueryList",
    "Window",
    "Document",
    "Storage",
    "Element",
    "DomRect",
    "DragEvent",
    "MouseEvent",
    "KeyboardEvent"
] }
serde = { version = "1.0", features = ["derive"] }
gloo-net = "0.7"
gloo-timers = "0.4"
gloo-storage = "0.4"
