[package]
name = "frontend"
version = "1.0.27"
edition = "2024"
authors = ["studio2201"]
license = "Apache-2.0"
repository = "https://github.com/studio2201/todo"
homepage = "https://github.com/studio2201/todo"
description = "Yew frontend application for Todo."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/studio2201/shared-assets.git", tag = "v3.0.34" }
shared-frontend = { git = "https://github.com/studio2201/shared-assets.git", tag = "v3.0.34" }
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
js-sys = "=0.3.98"
web-sys = { version = "=0.3.98", features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlFormElement",
    "MediaQueryList",
    "Window",
    "Document",
    "Storage",
    "Element",
    "DomRect",
    "DragEvent",
    "MouseEvent",
    "KeyboardEvent"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.7"
gloo-timers = "0.4"
