[package]
name = "shared-frontend"
version = "3.0.27"
edition = "2024"
description = "Browser and frontend shared assets for etecoons companion apps."
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/shared-assets"
homepage = "https://github.com/UberMetroid/shared-assets"
documentation = "https://github.com/UberMetroid/shared-assets"
readme = "../../README.md"
keywords = ["yew", "wasm", "web", "ui", "i18n"]
categories = ["wasm", "gui", "internationalization"]

[dependencies]
shared-core = { path = "../shared-core" }
yew = { version = "0.23", features = ["csr"] }
web-sys = { version = "=0.3.98", features = ["Window", "Document", "HtmlSelectElement", "Event", "Navigator", "Clipboard", "Selection", "FileReader", "File", "Blob"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
